--- a/css/main.css
+++ b/css/main.css
@@ -86,12 +86,21 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+   .content-wrapper{
+    width:90%;
+  }
+  
 /*------BASE HEADER AND FOOTER STYLES-------*/
+
 header, footer{
   display:flex;
   justify-content:center;
+  align-items:center;
   flex-flow:row wrap;
+}
+
+header{
+  padding:15px 0;
 }
 
 header .content-wrapper{
@@ -99,6 +108,7 @@ header .content-wrapper{
   justify-content:center;
   align-items:center;
   flex-flow:row wrap;
+  margin: 0;
 }
 
 header nav{
@@ -106,12 +116,24 @@ header nav{
   justify-content:space-around;
   align-items:center;
   flex-flow:row wrap;
+  width:60%;
 }
 
 header nav ul{
   display:flex;
   justify-content:space-around;
+  width:100%;
 
+}
+
+.header-divider{
+  width:100%;
+  height:1px;
+  margin: 10px 0 20px 0;
+}
+
+footer{
+  flex-direction:column;
 }
 
 footer .social-icons{
@@ -120,12 +142,28 @@ footer .social-icons{
   align-items:center;
 }
 
-footer p{
+footer .social-icons p{
   display:flex;
-  justify-content:center;
+  justify-content:space-around;
   align-items:center;
 }
-/*------MOBILE STYLES---------*/
+
+footer p{
+ margin: 0;
+}
+
+footer .content-wrapper{
+  width:55%;
+  margin:50px 0;
+}
+
+footer .contact{
+  margin-bottom:50px;
+}
+footer .copyright{
+  margin:20px 0;
+}
+/*------MOBILE HOMEPAGE---------*/
 
 /*---HERO STYLE---*/
 .hero-area{
@@ -148,7 +186,17 @@ aside{
   justify-content:center;
   flex-flow: row wrap;
 }
+.features p{
+  margin: 0;
+}
+.features article{
+  width:63%;
+  margin:30px 0;
+}
 
+.features h2{
+  margin-bottom:60px;
+}
 .features .features-items{
   display:flex;
   justify-content:center;
@@ -163,16 +211,33 @@ aside{
   flex-flow:row wrap;
 }
 
+.reviews h2{
+  margin-bottom:40px;
+}
 
-/*----MISSION----*/
+.reviews h3{
+  width: 55%;
+  margin: 20px 0;
+}
+
+/*----ABOUT PAGE----*/
 .mission{
   display:flex;
   justify-content:center;
   align-items:center;
   flex-flow:row wrap;
 }
+.contact-section{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-flow:row wrap;
+}
+.contact-information p{
+  margin:0;
+}
 
-/*----FAQ----*/
+/*----FAQ PAGE----*/
 .faq{
   display:flex;
   justify-content:center;
@@ -180,20 +245,23 @@ aside{
   flex-flow:row wrap;
 }
 
-.faq content-wrapper{
+.faq .content-wrapper{
+  margin: 50px 0 0 0;
   display:flex;
   justify-content:center;
   align-items:center;
   flex-flow:row wrap;
 }
 
-/*----CONTACT---*/
-.contact-section{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-flow:row wrap;
+.faq h2{
+  margin-bottom:40px;
 }
+
+.faq content{
+  margin-bottom:50px;
+}
+
+
 
 
 /* ==========================================================================
