--- a/css/main.css
+++ b/css/main.css
@@ -475,7 +475,53 @@ aside{
   }
      
     @media only screen and (min-width: 1200px) {
-    /*Desktop styles here*/
+    .content-wrapper{
+      max-width: 960px;
+      }
+
+    /*HERO*/
+    .hero-area h1{
+      width:60%;
+    }
+
+/* Aside */
+aside .content-wrapper {
+  justify-content: space-around;
+
+}
+
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+  width:30%;
+
+}
+
+/* Features */
+.features h2 {
+  width: 90%;
+}
+
+.features article {
+  flex-basis: 33%;
+}
+
+/* Reviews */ 
+.reviews article div {
+  width: 42%;
+}
+
+/*ABOUT PAGE*/
+
+.mission h2,
+    .contact-section .content-wrapper h2 {
+        width: 95%;
+    }
+
+/*FAQ PAGE*/
+.faq h2 {
+  width: 100%;
+}
+
     }
 /* ==========================================================================
    Print styles.
