--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,65 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   .content-wrapper{
-    width:90%;
+/*GENERAL STYLES*/
+
+
+   html {
+	font-size:16px;
   }
-  
+   
+  body {
+    font-family: 'Open Sans', sans-serif;
+    font-size:1em;
+    text-align:left;
+  }
+   
+  ul, 
+  ol {
+   list-style-type: none;
+  }
+   
+  a {
+    color: #e2e3ed;
+    text-decoration: none;
+  }
+   
+  h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size:1.875em;
+  }
+   
+  h3, 
+  h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size:1.5em;
+    margin:20px 0;
+  }
+   
+  p {
+    font-size:.875em;
+    line-height:1.285;
+    
+  }
+   
+  img {
+   
+  }
+   
+  figure {
+   
+  }
+   
+  address {
+    font-style:normal;
+  }
+
+  .content-wrapper{
+    width:90%;
+    margin:50px 0;
+  }
+
+
 /*------BASE HEADER AND FOOTER STYLES-------*/
 
 header, footer{
