--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,23 @@ ABOUT PAGE
   background-color: #527158;
   color:white;
 }
+
+.map figure{
+width:100%;
+height:0;
+padding-bottom:125%;
+overflow:hidden;
+position:relative;
+}
+
+.map iframe{
+width:100%;
+height:100%;
+position:absolute;
+top:0;
+left:0;
+}
+
 .contact-section{
   display:flex;
   justify-content:center;
@@ -600,9 +617,31 @@ FAQ PAGE
       width: 45%;
   }
 
+
+  .map figure{
+    width:100%;
+    height:0;
+    padding-bottom:125%;
+    overflow:hidden;
+    position:relative;
+    }
+    
+    .map iframe{
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    }
+
+
+
   .contact-section .content-wrapper h2 {
       width:80%;
   }
+
+
+
 
   .contact-content {
       display:flex;
