--- a/css/main.css
+++ b/css/main.css
@@ -621,7 +621,7 @@ FAQ PAGE
   .map figure{
     width:100%;
     height:0;
-    padding-bottom:125%;
+    padding-bottom:50%;
     overflow:hidden;
     position:relative;
     }
@@ -712,6 +712,23 @@ ABOUT PAGE
     .contact-section .content-wrapper h2 {
         width: 95%;
     }
+
+    .map figure{
+      width:100%;
+      height:0;
+      padding-bottom:40%;
+      overflow:hidden;
+      position:relative;
+      }
+      
+      .map iframe{
+      width:100%;
+      height:100%;
+      position:absolute;
+      top:0;
+      left:0;
+      }
+  
 
 /*=====================================================================
 FAQ PAGE
