Added icons to homepage

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,12 @@ textarea {
     line-height:1.285;
     
   }
-   
+ 
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
+
   img {
    width:100%;
   }
